tests/good/simple.latte
int f(int x, int y, int z) {
	int a;
	if (a == 2) {
		int x;
		x = 2 + 2 - 2;
	} else {
		int y;
		y = 1;
	}
	return 5;
}

int main() {
	return 4;
}
