tests/bad/frontendErrors/missingReturnStatementIf.latte
int main() {
    if(true) {
        return 1;
    } else {}
}